# SyntopicalChat

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: basic_usage.py
examples/pdfs/: README.md
src/syntopicalchat/: __init__.py
src/syntopicalchat/arxiv_integration/: __init__.py  arxiv_client.py
src/syntopicalchat/cli/: __init__.py  main.py
src/syntopicalchat/llm/: __init__.py  chat.py
src/syntopicalchat/pdf_processor/: __init__.py  processor.py
src/syntopicalchat/vector_db/: __init__.py  storage.py
tests/: __init__.py  conftest.py  test_arxiv_integration.py  test_basic.py  test_cli.py  test_llm_chat.py  test_pdf_processor.py  test_vector_db.py
