[tool.poetry]
name = "syntopicalchat"
version = "0.1.0"
description = "A CLI application for syntopical analysis of academic papers using LLMs"
authors = ["afsharalex <contact@alexafshar.com>"]
readme = "README.md"
packages = [{include = "syntopicalchat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
pypdf = "^3.17.0"
chromadb = "^0.4.18"
sentence-transformers = "^2.2.2"
typer = "^0.9.0"
rich = "^13.6.0"
pydantic = "^2.5.2"
tiktoken = "^0.5.1"
arxiv = "^1.4.8"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[tool.poetry.scripts]
syntopicalchat = "syntopicalchat.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=syntopicalchat --cov-report=term --cov-report=html"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]
